--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "esbuild": "^0.18.6",
+    "sass": "^1.63.6",
+    "yarn": "^1.22.19"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "sass ./app/assets/stylesheets/application.sass:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
