Wettkampf weiter gestalten

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -289,7 +289,7 @@ Rails/I18nLazyLookup:
 Rails/I18nLocaleAssignment:
   Enabled: true
 Rails/I18nLocaleTexts:
-  Enabled: true
+  Enabled: false
 Rails/IgnoredColumnsAssignment:
   Enabled: true
 Rails/Inquiry:
