--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "easymde": "^2.18.0",
     "esbuild": "^0.18.6",
     "sass": "^1.63.6",
     "yarn": "^1.22.19"
