--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -42,6 +42,8 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    env:
+      BUNDLE_WITHOUT: production development
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
