--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Set up database schema
         run: bin/rails db:schema:load
 
+      - name: Generate assets
+        run: bin/rails assets:precompile
+
       - name: Run tests
         run: bundle exec rspec
 
