--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "easymde": "^2.18.0",
     "esbuild": "^0.18.6",
     "sass": "^1.63.6",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "draggable": "^4.2.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
