--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "draggable": "^4.2.0",
     "easymde": "^2.18.0",
     "esbuild": "^0.18.6",
     "sass": "^1.63.6",
-    "yarn": "^1.22.19",
-    "draggable": "^4.2.0"
+    "sortablejs": "^1.15.2",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
