--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -149,6 +149,8 @@ Metrics/MethodLength:
   Exclude:
   - db/migrate/*.rb
   Max: 100
+Metrics/ModuleLength:
+  Enabled: false
 Metrics/ParameterLists:
   CountKeywordArgs: false
   Max: 6
@@ -227,7 +229,7 @@ RSpec/Focus:
 RSpec/IdenticalEqualityAssertion:
   Enabled: true
 RSpec/IndexedLet:
-  Enabled: true
+  Enabled: false
 RSpec/IsExpectedSpecify:
   Enabled: true
 RSpec/LetSetup:
