--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -134,8 +134,7 @@ Metrics/MethodLength:
 Metrics/ModuleLength:
   Enabled: false
 Metrics/ParameterLists:
-  CountKeywordArgs: false
-  Max: 6
+  Enabled: false
 Metrics/PerceivedComplexity:
   Max: 30
 Naming/BlockForwarding:
