--- a/.haml-lint.yml
+++ b/.haml-lint.yml
@@ -2,6 +2,8 @@ exclude:
 - tmp/**/*
 - vendor/bundle/**/*
 linters:
+  ConsecutiveSilentScripts:
+    enabled: false
   InlineStyles:
     enabled: false
   InstanceVariables:
