--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -121,6 +121,8 @@ Metrics/AbcSize:
   Enabled: false
 Metrics/BlockLength:
   Enabled: false
+Metrics/BlockNesting:
+  Enabled: false
 Metrics/ClassLength:
   Enabled: false
 Metrics/CollectionLiteralLength:
