--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -259,6 +259,8 @@ RSpec/SpecFilePathFormat:
   Enabled: true
 RSpec/SpecFilePathSuffix:
   Enabled: true
+RSpec/StringAsInstanceDoubleConstant:
+  Enabled: true
 RSpec/StubbedMock:
   Enabled: false
 RSpec/SubjectDeclaration:
