libvips bei Github-Actions installieren

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -35,7 +35,11 @@ jobs:
         with:
           ruby-version: '3.2.6'
           bundler-cache: true
-      
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libvips
+          version: 1.0
+
       - name: Set up database schema
         run: bin/rails db:schema:load
 
